<resources>
    <string name="app_name">Uber.Path</string>
    <string name="hi_there_wave">Hi There! 👋</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_get_started">Get Started</string>
    <string name="txt_first_title_onboard">Finance app the safest and most trusted</string>
    <string name="txt_first_description_onboard">Your finance work starts here. Our here to help you track and deal with speeding up your transactions.</string>
    <string name="txt_this_month">This month</string>
    <string name="txt_today">Today</string>
    <string name="txt_suggested_split">Suggested split</string>
    <string name="txt_direct_deposit">Direct Deposit</string>
    <string name="txt_second_title_onboard">The fastest transaction process only here</string>
    <string name="txt_second_description_onboard">Get easy to pay all your bills with just a few steps. Paying your bills become fast and efficient.</string>
    <string name="txt_welcome">Welcome back, Sign in to your account</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="cd_back_button">Back Button</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_or">OR</string>
    <string name="txt_no_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="cd_apple_login">Apple Login</string>
    <string name="cd_google_login">Google Login</string>
    <string name="cd_password_recovery">Password Recovery</string>
    <string name="txt_recovery_instruction">Enter your registered email below to receive password instructions.</string>
    <string name="txt_send_me_email">Send me email</string>
    <string name="txt_verify_your_identity">Verify your identity</string>
    <string name="txt_verification_code_info">Where would you like <b>Co.payment</b> to send your security code?</string>
    <string name="text_mail">abc@gmail.com</string>
    <string name="txt_continue">Continue</string>
    <string name="cd_identity">Identity</string>
    <string name="cd_checked">checked</string>
    <string name="txt_create_new_password">Create new password</string>
    <string name="txt_new_password_instruction">Please, enter a new password below different from the previous password.</string>
    <string name="txt_confirm_password">Confirm password</string>
    <string name="txt_verify_yourself">Verify it’s you</string>
    <string name="txt_verification_instruction">We send a code to %1$s. Enter it here to verify your identity.</string>
    <string name="txt_resend_code">Resend Code</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_biometric_instruction">Login quickly and securely with the fingerprint stored on this device</string>
    <string name="txt_will_do_later">I’ll do this later</string>
    <string name="cd_device">Device</string>
    <string name="cd_shield">Shield</string>
    <string name="cd_graph">Graph</string>
    <string name="txt_payment">Payment</string>
    <string name="cd_add">Add</string>
    <string name="cd_logo_mastercard">Logo MasterCard</string>
    <string name="fake_card_num">**** 2504</string>
    <string name="cd_tommy_image">Tommy Image</string>
    <string name="txt_enable_biometric_access">Enable biometric access</string>
    <string name="txt_full_name">Full name</string>
    <string name="txt_create_account">Create a Co.payment account</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account? <b>Sign In</b></string>
    <string name="txt_country_of_residence">Country of Residence</string>
    <string name="txt_select_country_instruction">Please select all the countries that you’re a tax resident in</string>
    <string name="cd_drop_icon">Drop icon</string>
    <string name="txt_reason_title">Main reason for using Smartpay</string>
    <string name="txt_reason_description">We need to know this for regulatory reasons. And also we’re curious!</string>
    <string name="cd_reason_icon">Reason Icon</string>
    <string name="txt_cancel">Cancel</string>
    <string name="cd_country_flag">Country Flag</string>
    <string name="cd_ischecked">isChecked</string>
    <string name="cd_capture">Capture</string>
    <string name="txt_proof_of_residency">Proof of residency</string>
    <string name="txt_prove_residency">Prove you live in %1$s.</string>
    <string name="cd_method_image">Method Image</string>
    <string name="cd_next">Next</string>
    <string name="cd_credit_cards">Credit cards</string>
    <string name="txt_get_free_card">Get Free Card</string>
    <string name="txt_card_description">The customizable, no hidden fee, instant discount debit or credit card</string>
    <string name="txt_create_your_smartpay_card">Create your \nSmartpay Card</string>
    <string name="txt_choose_your_style">Choose your style</string>
    <string name="txt_new_card">New card</string>
    <string name="cd_finger_print">Finger print</string>
    <string name="txt_let_s_verify_your_identity">Let’s verify your identity</string>
    <string name="txt_verify_your_identity_before_using_money">We’re required by law to verify your identity before we can use your money</string>
    <string name="txt_verify_identity">Verify Identity</string>
    <string name="cd_face_scan">Face scan</string>
    <string name="cd_card_theme_1">Card theme 1</string>
    <string name="cd_card_theme_2">Card theme 2</string>
    <string name="cd_card_theme_3">Card theme 3</string>
    <string name="txt_card_detail">Card Detail</string>
    <string name="txt_card_number">Card number</string>
    <string name="txt_expiry_date">Expiry date</string>
    <string name="txt_vcc">VCC</string>
    <string name="txt_card_holder">Card holder</string>
    <string name="txt_uk">Unite Kingdom</string>
    <string name="txt_save">Save</string>
    <string name="cd_card_style_1">Card style 1</string>
    <string name="cd_card_style_2">Card style 2</string>
    <string name="cd_card_style_3">Card style 3</string>
    <string name="txt_home">Home</string>
    <string name="txt_nationality">Nationality</string>
    <string name="txt_change">Change</string>
    <string name="txt_method_of_verification">Method of verification</string>
    <string name="cd_star_pattern_image">Star pattern image</string>
    <string name="txt_great_your_card_is_ready">Great! your card is ready🙂</string>
    <string name="txt_you_can_shop_transmit_transfer_conveniently">Now you can shop, transmit and transfer conveniently</string>
    <string name="txt_ok_im_ready">Ok, I’m ready!</string>
    <string name="txt_set_your_pin_code">Set your PIN code</string>
    <string name="txt_set_pin_description">We use state-of-the-art security measures to protect your information at all times</string>
    <string name="txt_create_pin">Create PIN</string>
    <string name="txt_focus_on_your_face">Focus on your face</string>
    <string name="txt_welcome_back">Welcome back!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_deposit">Deposit</string>
    <string name="txt_transfers">Transfers</string>
    <string name="txt_withdraw">Withdraw</string>
    <string name="txt_more">More</string>
    <string name="txt_all_transaction">All transactions</string>
    <string name="cd_right_arrow">Right arrow</string>
    <string name="toPlusRecipient">to %1$s</string>
    <string name="txt_tommy">Tommy Wilfred Jason</string>
    <string name="txt_linda">Linda John</string>
    <string name="txt_david">David William</string>
    <string name="txt_susan">Susan Charles</string>
    <string name="web_client_id">1015268625751-pb3mdim3h5erisknip7u6fkc28559b0b.apps.googleusercontent.com</string>
    <string name="map_api_key">AIzaSyBnze-wdUC7WYwvyT1qXT4LbulUUz59HQc</string>
    <string name="plus">+ %1$s</string>
    <string name="minus">- %1$s</string>
    <string name="dollar_amt">$ %1$s</string>
    <string name="txt_icon">Icon</string>
    <string name="txt_show_qr_code">Show QR Code</string>
    <string name="txt_qr_description">This is a single-use code for your use only. Get a new code each time you pay with smartpay</string>
    <string name="txt_user_qr">User QR</string>
    <string name="txt_information">Information</string>
    <string name="txt_test_card_num">**** **** **** 1121</string>
    <string name="txt_transfer">Transfer</string>
    <string name="txt_choose_cards">Choose cards</string>
    <string name="txt_choose_recipients">Choose recipients</string>
    <string name="txt_user_profile">User profile</string>
    <string name="txt_send_money">Send Money</string>
    <string name="txt_enter_amount">Enter amount:</string>
    <string name="txt_demo_limit">Max $12,652.00</string>
    <string name="txt_usd">USD</string>
    <string name="zero">0</string>
    <string name="txt_ok_send_now">Ok, Send Now!</string>
    <string name="txt_transfer_confirmation">Transfer Confirmation</string>
    <string name="txt_boa">Bank of\nAmerica</string>
    <string name="txt_amt">$865.10</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="txt_total">Total</string>
    <string name="txt_image_transfer_money">Image transfer money</string>
    <string name="txt_transfer_successful">Transfer Successful</string>
    <string name="txt_transfer_instruction">Transfers are reviewed which may result in delays or funds being frozen</string>
    <string name="txt_back_to_home">Back to Home</string>
    <string name="txt_bank_of_america">Bank of America</string>
    <string name="txt_25">25%</string>
    <string name="txt_50">50%</string>
    <string name="txt_75">75%</string>
    <string name="txt_100">100%</string>
    <string name="txt_select_your_bank">Select your bank</string>
    <string name="txt_add_new_bank">Add new bank</string>
    <string name="image_bank">Image bank</string>
    <string name="txt_top_up">Top Up</string>
    <string name="txt_debit">Debit</string>
    <string name="txtAmt_11_510">$11,510.00</string>
    <string name="txt_top_up_fee">Top up fee $3.0</string>
    <string name="txt_6000">$6000.00</string>
    <string name="txt_3000">$3000.00</string>
    <string name="txt_1500">$1500.00</string>
    <string name="txt_confirmation">Confirmation</string>
    <string name="txt_confirm_top_up">Confirm Top Up</string>
    <string name="txt_top_up_balance">Top up balance</string>
    <string name="txt_fee">Fee</string>
    <string name="txt_top_up_success">Top Up Success</string>
    <string name="txt_top_up_done_confirm_msg">Top up are reviewed which may result in delays or funds being frozen</string>
    <string name="txt_current_balance">Current balance</string>
    <string name="txt_12_256">$12,256.00</string>
    <string name="txt_bank_account_num">Bank account : %1$s</string>
    <string name="txt_transaction_history">Transaction history</string>
    <string name="cd_refresh">Refresh</string>
    <string name="cd_eye">Eye</string>
    <string name="txt_line">Line</string>
    <string name="txt_568_18">$568.18</string>
    <string name="txt_25_6">25.6%</string>
    <string name="cd_up_or_down">Up or Down</string>
    <string name="txt_from_last_month">from last month</string>
    <string name="cd_line_chart">Line chart</string>
    <string name="cd_bar_chart">Bar chart</string>
    <string name="txt_referral_code">Referral Code</string>
    <string name="txt_here_s_20_free_on_us">Here’s $20 free on us!</string>
    <string name="txt_share_you_referral_link_and_earn_n_20">Share you referral link and earn\n$20</string>
    <string name="txt_for_any_account_you_connects">For any account you connects</string>
    <string name="txt_get_3_free">Get $3 free</string>
    <string name="cd_copy">Copy</string>
    <string name="txt_share">Share</string>
    <string name="txt_ref_code">LIK5896O</string>
</resources>