<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_transferConfirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/shape_grey_button"
        android:contentDescription="@string/cd_back_button"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/img_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgV"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_190sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/txt_image_transfer_money"
        android:src="@drawable/img_transfer_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/txt_transferDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/txt_transfer_successful"
        android:textColor="@color/blue"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgV" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/txt_transfer_instruction"
        android:textAlignment="center"
        android:textColor="@color/greyscale_500"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="@id/txt_transferDone"
        app:layout_constraintStart_toStartOf="@id/txt_transferDone"
        app:layout_constraintTop_toBottomOf="@id/txt_transferDone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/txt_amt"
        android:textColor="@color/blue"
        android:textSize="@dimen/_21sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/shape_button"
        android:text="@string/txt_back_to_home"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>