<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:context=".activity.QRScanActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/shape_grey_button"
        android:contentDescription="@string/cd_back_button"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/img_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_showQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/txt_show_qr_code"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <ImageView
        android:id="@+id/btn_moreDots"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:background="@drawable/shape_grey_button"
        android:contentDescription="@string/cd_back_button"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/img_more_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/shape_edittext"
        android:padding="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        tools:layout_editor_absoluteX="19dp">

        <ImageView
            android:id="@+id/imgV_user"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:contentDescription="@string/cd_tommy_image"
            android:src="@drawable/img_tommy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="end"
            android:text="@string/txt_tommy"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/imgV_drop"
            app:layout_constraintStart_toEndOf="@id/imgV_user"
            app:layout_constraintTop_toTopOf="@id/imgV_user" />

        <TextView
            android:id="@+id/txt_cardNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="end"
            android:letterSpacing="0.02"
            android:text="@string/txt_test_card_num"
            android:textColor="@color/greyscale_500"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/imgV_user"
            app:layout_constraintEnd_toStartOf="@id/imgV_drop"
            app:layout_constraintStart_toEndOf="@id/imgV_user" />

        <ImageView
            android:id="@+id/imgV_drop"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/cd_drop_icon"
            android:src="@drawable/img_spinner_drop_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgV_yourQR"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/shape_bg_white"
        android:contentDescription="@string/txt_user_qr"
        android:padding="@dimen/_35sdp"
        android:src="@drawable/img_qr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_20sdp"
        android:contentDescription="@string/txt_information"
        android:src="@drawable/img_alert_circle"
        app:layout_constraintBottom_toTopOf="@id/txt_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.03"
        android:text="@string/txt_qr_description"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>