<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/txt_select_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_your_bank"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/shape_grey_button"
        android:padding="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txt_select_bank">

        <ImageView
            android:id="@+id/imgV_user"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="@dimen/_38sdp"
            android:contentDescription="@string/cd_tommy_image"
            android:src="@drawable/img_bank_of_america"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="end"
            android:text="@string/txt_bank_of_america"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/imgV_isChecked"
            app:layout_constraintStart_toEndOf="@id/imgV_user"
            app:layout_constraintTop_toTopOf="@id/imgV_user" />

        <TextView
            android:id="@+id/txt_cardNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:ellipsize="end"
            android:letterSpacing="0.02"
            android:text="@string/txt_test_card_num"
            android:textColor="@color/greyscale_500"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintBottom_toBottomOf="@id/imgV_user"
            app:layout_constraintEnd_toStartOf="@id/imgV_isChecked"
            app:layout_constraintStart_toEndOf="@id/imgV_user" />

        <ImageView
            android:id="@+id/imgV_isChecked"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/cd_checked"
            android:src="@drawable/img_checked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_addBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/shape_edittext"
        android:padding="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_bank"
        tools:layout_editor_absoluteX="19dp">

        <ImageView
            android:id="@+id/imgV_bank"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/image_bank"
            android:src="@drawable/img_bank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/txt_add_new_bank"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgV_bank"
            app:layout_constraintStart_toEndOf="@id/imgV_bank"
            app:layout_constraintTop_toTopOf="@id/imgV_bank" />

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:contentDescription="@string/cd_next"
            android:src="@drawable/img_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/shape_button"
        android:text="@string/txt_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_addBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>