<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:context=".activity.ReferralCodeActivity">

    <ImageView
        android:id="@+id/imgV"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="@string/txt_referral_code"
        android:src="@drawable/img_referral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:text="@string/txt_here_s_20_free_on_us"
        android:textColor="@color/blue"
        android:textSize="@dimen/_19ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgV" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/txt_share_you_referral_link_and_earn_n_20"
        android:textAlignment="center"
        android:textColor="@color/greyscale_500"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/shape_edittext"
        android:padding="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/txt2">

        <ImageView
            android:id="@+id/imgV_copy"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/cd_copy"
            android:src="@drawable/img_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ref_code"
            android:textColor="@color/greyscale_300"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_share"
            app:layout_constraintStart_toEndOf="@id/imgV_copy"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_share"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/shape_line_divider"
        app:layout_constraintBottom_toTopOf="@id/txt3"
        app:layout_constraintTop_toBottomOf="@id/layout_code" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_7sdp"
        android:text="@string/txt_get_3_free"
        android:textColor="@color/blue"
        android:textSize="@dimen/_19ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_35sdp"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:text="@string/txt_for_any_account_you_connects"
        android:textAlignment="center"
        android:textColor="@color/greyscale_500"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@id/btn_googleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_googleLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@drawable/shape_grey_button"
        android:contentDescription="@string/cd_google_login"
        android:padding="@dimen/_11sdp"
        android:src="@drawable/img_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_appleLogin"
        app:layout_constraintHorizontal_weight="@integer/material_motion_duration_short_1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_appleLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:background="@drawable/shape_grey_button"
        android:contentDescription="@string/cd_apple_login"
        android:padding="@dimen/_11sdp"
        android:src="@drawable/img_apple"
        app:layout_constraintBottom_toBottomOf="@id/btn_googleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="@integer/material_motion_duration_short_1"
        app:layout_constraintStart_toEndOf="@id/btn_googleLogin"
        app:layout_constraintTop_toTopOf="@id/btn_googleLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>